--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   video_player: ^2.4.7
   cached_network_image: ^3.2.3
+  supabase_flutter: ^2.5.6
+
 
 dev_dependencies:
   flutter_test:
