--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   video_player: ^2.4.7
   cached_network_image: ^3.2.3
   supabase_flutter: ^2.5.6
+  flutter_svg: ^1.0.0
+  file_picker: ^5.0.0
+  path: ^1.8.0
+
+
 
 
 dev_dependencies:
