--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_svg: ^1.0.0
   file_picker: ^5.0.0
   path: ^1.8.0
+  shimmer: ^2.0.0
+  flutter_staggered_animations: ^1.1.1
+  chewie: ^1.3.4
 
 
 
